--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 #root {
-  max-width: 1280px;
+  max-width: 300px;
   margin: 0 auto;
-  padding: 2rem;
+  padding: 1rem;
   text-align: center;
 }
 
@@ -13,6 +13,16 @@
 
 .list-item + .list-item {
   margin-top: 0.5rem;
+}
+
+.input {
+  padding: 0.5rem 0.5rem;
+  min-width: 0;
+}
+
+.input + span,
+span + .input {
+  margin-left: 0.5rem;
 }
 
 .input + .button {
