Add label to input

--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,15 @@
   text-align: center;
 }
 
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  clip-path: inset(50%);
+  clip: rect(1px, 1px, 1px, 1px);
+}
+
 .list-item {
   display: flex;
   justify-content: center;
@@ -20,9 +29,9 @@
   min-width: 0;
 }
 
-.input + span,
-span + .input {
+.list-item > span {
   margin-left: 0.5rem;
+  margin-right: 0.5rem;
 }
 
 .input + .button {
