--- a/src/index.css
+++ b/src/index.css
@@ -65,6 +65,10 @@ li {
   list-style: none;
 }
 
+input {
+  font-size: 1rem;
+}
+
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
